--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "a1p2qdvhico",
+    "site": "q1itsmerumyeahh",
     "public": "public",
     "ignore": [
       "firebase.json",
